ui.frontend/src/main/webpack/etisalat/styles/custom-components/share-this-design.scss
.share {
  +.text{
    margin-top: toRem(50);

    @include respond-to-min($tablet){
      margin-top: toRem(75);
    }

    @include respond-to-min($desktop){
      margin-top: 0;
    }
  }
  
  .main-text-action-wrapper {
     float: right;

      @include rtlBlock(){
        float: left;
      }
    & .action.share.fix.true {
      width: 100%;

      @include rtlBlock() {
        left: 0;
        right: unset;
      }

      @include respond-to-max($phone){
        padding: 0;
      }

      @include respond-to-min($tablet){
        padding: 0 1rem 1rem;
      }

      @include respond-to-max($tablet) {
        background-color: $white;
        left: 0;
        margin: 0;
        position: absolute;
        top: 0;
        z-index: 22;

        & .copy-link {
          display: none;
        }

        & .panel-body {
          padding: 0;
        }

        & .share-link {
          align-items: center;
          display: flex;
          margin-top: .25rem;

          & strong {
            color: $black;
            font-size: $font16;

            @include font-family-lato;
          }

          & .link-label {
            color: $black;
            font-size: toRem(12);
            font-weight: bold;
            letter-spacing: toRem(2);
            line-height: toRem(16);
            margin-bottom: toRem(5);
            text-transform: uppercase;

            @include font-family-lato;
          }

          &.icon-list {
            @include respond-to-max($tablet) {
              padding: 0 1rem;
            }

            & .links-item {
              display: inline-block;
              padding: 0 toRem(8);
              padding: toRem(8) toRem(8);

              @include respond-to-min($tablet) {
                padding: toRem(15) toRem(10);
              }

              &:first-child {
                padding-left: 0;
              }

              & a {
                min-width: toRem(180);
                width: auto;
              }

              svg {
                height: toRem(40);
                width: toRem(40);
              }
            }
          }

          &.form-share {
            .input-group,
            .form-group {
              width: 100%;
            }

            &.form-control {
              border-right: toRem(1) solid $cust-select;
              font-size: $font12pt8;
              height: auto;
              padding: toRem(10);
              text-overflow: ellipsis;

              &:focus {
                border: toRem(1) solid $grey5;
                box-shadow: none;
              }

              &:first-child {
                border-bottom-left-radius: 0;
                border-bottom-right-radius: 0;
                border-right: none;
                border-top-left-radius: 0;
                border-top-right-radius: 0;
              }
            }

            &.input-group-addon {
              background-color: $white;
              border: 1px solid $cust-select;
              border-radius: 0;
              color: $gray;
              font-size: $font16;
              font-weight: 400;
              line-height: 1;
              padding: toRem(5);
              position: relative;
              text-align: center;
              vertical-align: middle;
              white-space: nowrap;

              &::before {
                background-color: $grey5;
                content: " ";
                height: toRem(20);
                left: 0;
                position: absolute;
                top: toRem(8);
                width: toRem(1);
                z-index: 2;
              }

              &:last-child {
                border-bottom-left-radius: 0;
                border-left: none;
                border-top-left-radius: 0;
              }
            }

            &.copied-icon {
              display: none;
            }

            &.copied {
              &.form-control,
              .input-group-addon {
                border-color: $main-green;
              }

              &.form-control {
                border-right: 0;
              }

              &.input-group-addon {
                border-left: 0;
              }

              &.copy-icon {
                display: none;
              }

              &.copied-icon {
                display: block;
              }
            }
          }
        }
      }

      @include respond-to-min($desktop) {
        background-color: $white;
        margin-left: toRem(-12);
        margin-right: toRem(-12);
        padding: 0;
        position: absolute;
        right: 0;
        top: toRem(-64);
        width: toRem(320);
        z-index: 5;

        .panel-body {
          margin-right: auto;
          margin-left: toRem(20);
          padding: 0;

          @include rtlBlock(){
            margin-left: auto;
            margin-right: toRem(20);
          }
        }

        &.copy-link {
          display: block;
        }

        &.share-link {
          & strong {
            color: $almost-black;
            font-size: $font16;

            @include font-family-lato;
          }

          & .link-label {
            color: $black;
            font-size: toRem(12);
            font-weight: get-font-weight("bold");
            line-height: 1.6;
            margin-bottom: toRem(5);
            text-transform: uppercase;

            @include font-family-lato;
          }

          &.icon-list {
            @include respond-to-max($tablet) {
              height: 56px;
              padding: 0 1rem;
            }

            &.links-item {
              display: inline-block;
              padding: 0 toRem(8);
              padding: toRem(8) toRem(8);

              @include respond-to-min($tablet) {
                padding: toRem(15) toRem(10);
              }

              &:first-child {
                padding-left: 0;
              }

              & a {
                min-width: toRem(180);
                width: auto;
              }

              svg {
                height: toRem(40);
                width: toRem(40);
              }
            }
          }

          &.form-share {
            .input-group,
            .form-group {
              width: 100%;
            }

            &.form-control {
              border-right: toRem(1) solid $cust-select;
              font-size: $font12pt8;
              height: auto;
              padding: toRem(10);
              text-overflow: ellipsis;

              &:focus {
                border: toRem(1) solid $grey5;
                box-shadow: none;
              }

              &:first-child {
                border-bottom-left-radius: 0;
                border-bottom-right-radius: 0;
                border-right: none;
                border-top-left-radius: 0;
                border-top-right-radius: 0;
              }
            }

            &.input-group-addon {
              background-color: $white;
              border: 1px solid $cust-select;
              border-radius: 0;
              color: $gray;
              font-size: $font16;
              font-weight: 400;
              line-height: 1;
              padding: toRem(5);
              position: relative;
              text-align: center;
              vertical-align: middle;
              white-space: nowrap;

              &::before {
                background-color: $grey5;
                content: " ";
                height: toRem(20);
                left: 0;
                position: absolute;
                top: toRem(8);
                width: toRem(1);
                z-index: 2;
              }

              &:last-child {
                border-bottom-left-radius: 0;
                border-left: none;
                border-top-left-radius: 0;
              }
            }

            &.copied-icon {
              display: none;
            }

            &.copied {
              &.form-control,
              .input-group-addon {
                border-color: $main-green;
              }

              &.form-control {
                border-right: 0;
              }

              &.input-group-addon {
                border-left: 0;
              }

              &.copy-icon {
                display: none;
              }

              &.copied-icon {
                display: block;
              }
            }
          }
        }
      }
    }


    .open > .dropdown-menu {
      border: 0;
      display: block;
      left: auto;
      min-width: toRem(300);
      min-width: toRem(300);
      right: 0;
    }

    strong {
      color: $almost-black;
      font-size: $font16;

      @include font-family-lato;
    }

    .link-label {
      color: $black;
      font-size: toRem(12);
      font-weight: bold;
      letter-spacing: 0;
      line-height: 1.6;
      margin-bottom: toRem(5);
      text-transform: uppercase;

      @include font-family-lato;
    }

    .icon-list {
      @include respond-to-max($tablet) {
        padding: 0 1rem;
      }

      .links-item {
        display: inline-block;
        padding: 0 toRem(8);
        padding: toRem(8) toRem(8);

        @include respond-to-min($tablet) {
          padding: toRem(15) toRem(10);
        }

        &:first-child {
          @include respond-to-min($desktop){
            padding-left: 0;
          }
        }

        & a {
          min-width: toRem(180);
          width: auto;
        }

        svg {
          height: toRem(40);
          width: toRem(40);
        }
      }
    }

    .form-share {
      .input-group,
      .form-group {
        width: 100%;
      }

      .form-control {
        border-left: toRem(1) solid $cust-select;
        border-radius: 0;
        border-right: none;
        color: $gray;
        font-size: $font12pt8;
        height: auto;
        line-height: 1.6;
        padding: toRem(10);
        text-overflow: ellipsis;

        @include font-family-lato;

        @include rtlBlock() {
          border-left: 0;
          border-right: toRem(1) solid $cust-select;
        }

        &:focus {
          border: toRem(1) solid $grey5;
          border-right: none;
          box-shadow: none;
        }
      }

      .input-group-addon {
        background-color: $white;
        border-left: none;
        border-radius: 0;
        border-right: toRem(1) solid $cust-select;
        color: $gray;
        font-size: $font16;
        font-weight: 400;
        line-height: 1;
        padding: toRem(5);
        position: relative;
        text-align: center;
        vertical-align: middle;
        white-space: nowrap;

        @include rtlBlock() {
          border-left: 1px solid $cust-select;
          border-right: none;
        }

        &::before {
          background-color: $grey5;
          content: " ";
          height: toRem(20);
          left: 0;
          position: absolute;
          top: toRem(8);
          width: toRem(1);
          z-index: 2;

          @include rtlBlock(){
            left: toRem(50);
          }
        }
      }

      .copied-icon {
        display: none;
      }

      &.copied {
        .form-control,
        .input-group-addon {
          border-color: $main-green;
        }

        .form-control {
          border-right: 0;
        }

        .input-group-addon {
          border-left: 0;
        }

        .copy-icon {
          display: none;
        }

        .copied-icon {
          display: block;
        }
      }
    }

    // .form-share {
    // 	.form-control {

    // 		border-right: 1px solid $cust-select;
    // 	}

    // }
  }
}

